# packages/views/src/index.ts
@@ -1,1 +1,3 @@
 export { StatusView } from './system/status-view';
+export { RegisterView } from './identity/register-view';
+export { HomeView } from './identity/home-view';
